get estimate modal fix on mobile

--- a/assets/scss/global/_main.scss
+++ b/assets/scss/global/_main.scss
@@ -1198,4 +1198,8 @@ ul {
   form {
     text-align: left;
   }
+
+  @include breakpoint(small down) {
+    width: 100%;
+  }
 }
